RedundantExecutionService code review and refactoring

--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -232,10 +232,10 @@
     <Compile Include="Controllers\ExerciseController.cs" />
     <Compile Include="Controllers\HintController.cs" />
     <Compile Include="DataContexts\TextsRepo.cs" />
-    <Compile Include="ExecutionService\CsSandboxService.Settings.Sample.cs" />
+    <Compile Include="ExecutionService\CsSandboxExecutionService.Settings.Sample.cs" />
     <Compile Include="ExecutionService\RedundantExecutionService.cs" />
-    <Compile Include="Ideone\ExecutionService.Settings.cs" />
-    <Compile Include="ExecutionService\IdeoneService.cs" />
+    <Compile Include="Ideone\IdeoneClient.Settings.cs" />
+    <Compile Include="ExecutionService\IdeoneExecutionService.cs" />
     <Compile Include="ExecutionService\StringExtention.cs" />
     <Compile Include="Migrations\201503231319119_ExecutionServiceName.cs" />
     <Compile Include="Migrations\201503231319119_ExecutionServiceName.Designer.cs">
@@ -243,7 +243,7 @@
     </Compile>
     <Compile Include="SubmitAllSlide_Test.cs" />
     <Compile Include="ExecutionServiceMigration_Test.cs" />
-    <Compile Include="ExecutionService\CsSandboxService.cs" />
+    <Compile Include="ExecutionService\CsSandboxExecutionService.cs" />
     <Compile Include="ExecutionService\IExecutionService.cs" />
     <Compile Include="ExecutionService\SubmissionResult.cs" />
     <Compile Include="Migrations\201411140847550_extract large text fields.cs" />
@@ -264,7 +264,7 @@
     </Compile>
     <Compile Include="Models\TextBlob.cs" />
     <Compile Include="CreateListOfUsedTokens.cs" />
-    <Compile Include="Ideone\ExecutionService.Settings.Sample.cs" />
+    <Compile Include="Ideone\IdeoneClient.Settings.Sample.cs" />
     <Compile Include="Migrations\201408220628510_AddUnitAppearance.cs" />
     <Compile Include="Migrations\201408220628510_AddUnitAppearance.Designer.cs">
       <DependentUpon>201408220628510_AddUnitAppearance.cs</DependentUpon>
@@ -370,7 +370,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Ideone\CreateSubmitionResult.cs" />
-    <Compile Include="Ideone\ExecutionService_should.cs" />
+    <Compile Include="Ideone\IdeoneClient_should.cs" />
     <Compile Include="Ideone\GetSubmitionDetailsResult.cs" />
     <Compile Include="Ideone\GetSubmitionStatusResult.cs" />
     <Compile Include="Ideone\ResponseResult.cs" />
@@ -404,7 +404,7 @@
     <Compile Include="Models\UsersStatsPageModel.cs" />
     <Compile Include="Models\Visiters.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Ideone\ExecutionService.cs" />
+    <Compile Include="Ideone\IdeoneClient.cs" />
     <Compile Include="Service References\Ideone_Service_v1Service.cs" />
     <Compile Include="Startup.cs" />
     <EmbeddedResource Include="Migrations\201407111234255_InitialCreate.resx">
@@ -821,7 +821,7 @@
     <Content Include="flexslider\fonts\flexslider-icon.ttf" />
     <Content Include="flexslider\fonts\flexslider-icon.woff" />
     <Content Include="flexslider\README.mdown" />
-    <Compile Include="ExecutionService\CsSandboxService.Settings.cs" />
+    <Compile Include="ExecutionService\CsSandboxExecutionService.Settings.cs" />
     <None Include="NLog.xsd">
       <SubType>Designer</SubType>
     </None>
