--- a/src/Selenium/Selenium.csproj
+++ b/src/Selenium/Selenium.csproj
@@ -88,6 +88,7 @@
     <Compile Include="SeleniumTests\SignInPageShould.cs" />
     <Compile Include="SeleniumTests\SlidePageShould.cs" />
     <Compile Include="SeleniumTests\StartPageShould.cs" />
+    <Compile Include="SeleniumTests\TestSeleniumCourse\MainEngineTest.cs" />
     <Compile Include="SeleniumTests\TocShould.cs" />
     <Compile Include="SeleniumTests\UlearnDriverTest.cs" />
     <Compile Include="UlearnDriverComponents\Db.cs" />
