--- a/src/Selenium/packages.config
+++ b/src/Selenium/packages.config
@@ -4,4 +4,5 @@
   <package id="Microsoft.AspNet.Identity.Core" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="1.0.0" targetFramework="net45" />
   <package id="NUnit" version="2.6.3" targetFramework="net45" />
+  <package id="Selenium.WebDriver" version="2.45.0" targetFramework="net45" />
 </packages>
