--- a/src/courses/SeleniumCourse/SampleCourse.csproj
+++ b/src/courses/SeleniumCourse/SampleCourse.csproj
@@ -52,20 +52,28 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Slides\Title.txt" />
     <Content Include="Title.txt" />
     <Content Include="Slides\U98_Sample\Prelude.txt" />
-    <Content Include="Slides\U98_Sample\S030-QuizSlidePage.xml">
+    <Content Include="Slides\U98_Sample\S030-QuizSlidePage.quiz.xml">
       <SubType>Designer</SubType>
     </Content>
     <Content Include="Slides\U98_Sample\Title.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\uLearn\uLearn.csproj">
+    <ProjectReference Include="..\..\uLearn\uLearn.csproj">
       <Project>{333dd5a7-9955-46cb-8905-79e800f2b435}</Project>
       <Name>uLearn</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>REM copy this post build step to new course
+$(SolutionDir)packages\NUnit.Runners.2.6.3\tools\nunit-console.exe $(TargetPath) /exclude:Long || exit /b
+del "$(OutDir)$(ProjectName).zip"
+"$(SolutionDir)..\tools\7z\7za.exe" a "$(OutDir)$(ProjectName).zip" "$(ProjectDir)Slides\*"
+copy "$(OutDir)$(ProjectName).zip" $(SolutionDir)uLearn.Web\Courses.Staging\</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
