--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -16,7 +16,7 @@
 		</sectionGroup>
 	</configSections>
 	<connectionStrings>
-		<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\db.mdf;Initial Catalog=db;Integrated Security=True" providerName="System.Data.SqlClient" />
+		<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=db;Integrated Security=True" providerName="System.Data.SqlClient" />
 	</connectionStrings>
 	<appSettings>
 		<add key="webpages:Version" value="3.0.0.0" />
