--- a/src/courses/OOP/OOP.csproj
+++ b/src/courses/OOP/OOP.csproj
@@ -140,6 +140,9 @@
     <Compile Include="Slides\U10_NoIfs\S020_Wood.cs" />
     <Compile Include="Slides\U10_NoIfs\S030_Основа.cs" />
     <Compile Include="Slides\U10_NoIfs\S040_Визуализация.cs" />
+    <Compile Include="Slides\U13_Threading\S010_ThreadSafety.cs" />
+    <Compile Include="Slides\U13_Threading\S030_Testing.cs" />
+    <Compile Include="Slides\U13_Threading\S020_Server.cs" />
     <Compile Include="Slides\U12_Network\S010_Network.cs" />
     <Compile Include="Slides\U12_Network\S030_ServerAndClients.cs" />
     <Compile Include="Slides\U12_Network\S040_Config.cs" />
@@ -175,6 +178,7 @@
     <Content Include="Slides\U05_UI2\separated-presentation.png" />
     <Content Include="Slides\U05_UI2\Title.txt" />
     <Content Include="Slides\U10_NoIfs\Title.txt" />
+    <Content Include="Slides\U13_Threading\Title.txt" />
     <Content Include="Slides\U12_Network\Title.txt" />
     <Content Include="Slides\U11_AI\Title.txt" />
   </ItemGroup>
