--- a/src/Selenium/Selenium.csproj
+++ b/src/Selenium/Selenium.csproj
@@ -92,8 +92,7 @@
     <Compile Include="SeleniumTests\SignInPageShould.cs" />
     <Compile Include="SeleniumTests\StartPageShould.cs" />
     <Compile Include="SeleniumTests\TestSampleCourse\MainEngineTest.cs" />
-    <Compile Include="SeleniumTests\TocShould.cs" />
-    <Compile Include="SeleniumTests\UlearnDriverTest.cs" />
+    <Compile Include="SeleniumTests\TestToc.cs" />
     <Compile Include="UlearnDriverComponents\Interfaces\IObservable.cs" />
     <Compile Include="UlearnDriverComponents\Interfaces\IObserver.cs" />
     <Compile Include="UlearnDriverComponents\Interfaces\ITocSlide.cs" />
@@ -125,7 +124,6 @@
     <Compile Include="UlearnDriverComponents\ULearnConstants.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UlearnDriverComponents\UlearnDriver.cs" />
-    <Compile Include="UlearnTests\MainTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
@@ -162,6 +160,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="chromedriver.exe" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="screenshots\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets" Condition="Exists('..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets')" />
