--- a/src/courses/AIML/AIML.csproj
+++ b/src/courses/AIML/AIML.csproj
@@ -114,12 +114,24 @@
     <Compile Include="Slides\L090 - Классификация и распознавание образов\S040 - Задача классификации.cs" />
     <Compile Include="Slides\L090 - Классификация и распознавание образов\S050 - Применение карты Кохонена для классификации.cs" />
     <Compile Include="Slides\L090 - Классификация и распознавание образов\S060 - Анализ и визуализация данных с помощью карты Кохонена.cs" />
+    <Compile Include="Slides\L090 - Классификация и распознавание образов\S098 - Исходные коды.cs" />
     <Compile Include="Slides\L100 - Разное о нейронных сетях\S010 - Нейронная сеть как функция действительных переменных.cs" />
     <Compile Include="Slides\L100 - Разное о нейронных сетях\S020 - Рекуррентные нейронные сети. Сеть Элмана.cs" />
     <Compile Include="Slides\L100 - Разное о нейронных сетях\S030 - Вычисления за пределами машины Тьюринга.cs" />
     <Compile Include="Slides\L100 - Разное о нейронных сетях\S040 - Ассоциативная память.cs" />
     <Compile Include="Slides\L100 - Разное о нейронных сетях\S050 - Реализация нейронных сетей.cs" />
     <Compile Include="Slides\L100 - Разное о нейронных сетях\S060 - Заключение.cs" />
+    <Compile Include="Slides\L110 - Генетические алгоритмы\S010 - Эволюция.cs" />
+    <Compile Include="Slides\L110 - Генетические алгоритмы\S020 - Общая схема генетического алгоритма.cs" />
+    <Compile Include="Slides\L110 - Генетические алгоритмы\S030 - Программная реализация генетического алгоритма.cs" />
+    <Compile Include="Slides\L110 - Генетические алгоритмы\S040 - Локальные и глобальные минимумы.cs" />
+    <Compile Include="Slides\L110 - Генетические алгоритмы\S050 - Модификации генетического алгоритма.cs" />
+    <Compile Include="Slides\L110 - Генетические алгоритмы\S060 - Эффективность генетических алгоритмов.cs" />
+    <Compile Include="Slides\L110 - Генетические алгоритмы\S098 - Исходные коды.cs" />
+    <Compile Include="Slides\L120 - Применение генетических алгоритмов\S010 - Подбор кодирования в двух классических задачах.cs" />
+    <Compile Include="Slides\L120 - Применение генетических алгоритмов\S020 - Сегментация изображений и многокритериальная оптимизация.cs" />
+    <Compile Include="Slides\L120 - Применение генетических алгоритмов\S030 - Об одной прикладной задаче.cs" />
+    <Compile Include="Slides\L120 - Применение генетических алгоритмов\S040 - Символьная регрессия.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -208,6 +220,9 @@
     <Content Include="Slides\L090 - Классификация и распознавание образов\Title.txt" />
     <Content Include="Slides\L100 - Разное о нейронных сетях\S999 - Quiz.quiz.xml" />
     <Content Include="Slides\L100 - Разное о нейронных сетях\Title.txt" />
+    <Content Include="Slides\L110 - Генетические алгоритмы\S999 - Quiz.quiz.xml" />
+    <Content Include="Slides\L110 - Генетические алгоритмы\Title.txt" />
+    <Content Include="Slides\L120 - Применение генетических алгоритмов\Title.txt" />
     <Content Include="Slides\Title.txt" />
   </ItemGroup>
   <ItemGroup>
