--- a/.gitignore
+++ b/.gitignore
@@ -178,3 +178,4 @@ FakesAssemblies/
 /src/uLearn.Web/Courses/
 /src/uLearn.Web/Courses.Staging/*.zip
 /src/UI.Tests/screenshots
+/src/courses/Linq/Generated
