draft of ExerciseBlock in xml

--- a/src/courses/Help/Help.csproj
+++ b/src/courses/Help/Help.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Slides\U99_Presentation\_Code.cs" />
     <Compile Include="Slides\U99_Presentation\S001_Gallery.cs" />
     <Compile Include="CourseTests.cs" />
+    <Compile Include="Slides\U99_Presentation\_FirstStep.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Slides\Title.txt" />
@@ -54,6 +55,7 @@
     <Content Include="Slides\U99_Presentation\img\markdown.png" />
     <Content Include="Slides\U99_Presentation\S002_sample.quiz.xml" />
     <Content Include="Slides\U99_Presentation\S003_code.lesson.xml" />
+    <Content Include="Slides\U99_Presentation\S004_example.lesson.xml" />
     <Content Include="Slides\U99_Presentation\Title.txt" />
   </ItemGroup>
   <ItemGroup>
