--- a/src/uLearn/packages.config
+++ b/src/uLearn/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ApprovalTests" version="3.0.8" targetFramework="net45" />
+  <package id="ApprovalUtilities" version="3.0.8" targetFramework="net45" />
   <package id="bootstrap" version="3.1.1" targetFramework="net45" />
   <package id="CodeMirror" version="2.37" targetFramework="net45" />
   <package id="DotNetZip" version="1.9.3" targetFramework="net45" />
